[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/ui/minimapa/minimapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/ui/minimapa/iconos/player_icon.png" type="Texture" id=2]
[ext_resource path="res://Juego/ui/minimapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/ui/minimapa/iconos/estacion_recarga_icon.png" type="Texture" id=4]
[ext_resource path="res://Juego/ui/minimapa/iconos/base_enemiga_icon_C.png" type="Texture" id=5]
[ext_resource path="res://Juego/ui/minimapa/iconos/interceptor_icon.png" type="Texture" id=6]
[ext_resource path="res://Juego/ui/minimapa/iconos/rele_masa_icon.png" type="Texture" id=7]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -191.0
margin_right = 159.0
margin_bottom = -15.0
rect_min_size = Vector2( 318, 176 )
script = ExtResource( 3 )

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = -5.0

[node name="ZonaRenderizadoMiniMapa" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 313.0
margin_bottom = 171.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
position = Vector2( 159, 87 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 108, 125 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="IconoEstacion" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.705882, 0.231373, 0.733333, 1 )
position = Vector2( 209, 126 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="IconoRele" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.0431373, 0.784314, 0.980392, 1 )
position = Vector2( 97, 87 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( 219, 85 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true

[node name="TweenVisibilidad" type="Tween" parent="."]

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
